新增组件化，组件通信内容

--- a/docs/02模板语法.md
+++ b/docs/02模板语法.md
@@ -3,7 +3,7 @@
 #### 1.1 文本
 #### 1.1.1 Mustache 
 + 语法：{{property}}
-+ 绑定的数据对象上 property 发生了改变，插值处的内容都会更新
++ 响应式：绑定的数据对象上 property 发生了改变，插值处的内容都会更新
 + 加了V-once属性一次性取值，不会更新，
 ```html
 <body>
@@ -35,20 +35,20 @@
 <br />
 
 #### 1.1.2  HTML和Text
-1. 指令：v-html=“property”
-+ 将数据对象中的数据作为HTML解析，并覆盖将标签中的文本内容。
-+ 类似innerHtml。
-+ tips：站点上动态渲染的任意 HTML 可能会非常危险，因为它很容易导致 XSS 攻击。请只对可信内容使用 HTML 插值，绝不要对用户提供的内容使用插值。
+1. 指令：```v-html="property"```
+   + 将数据对象中的数据作为HTML解析，并覆盖将标签中的文本内容。
+   + 类似innerHtml。
+   + tips：站点上动态渲染的任意 HTML 可能会非常危险，因为它很容易导致 XSS 攻击。请只对可信内容使用 HTML 插值，绝不要对用户提供的内容使用插值。
 <br />
-2. 指令：v-text=“property”
-+ 将数据对象的属性解析为普通文本。
+2. 指令：```v-text="property"```
+   + 将数据对象的属性解析为普通文本。
 <br />
-3. 指令：v-pre
-+ 停止解析文本中的{{property}}语法
+3. 指令：```v-pre```
+   + 停止解析文本中的{{property}}语法
 <br />
-4. 指令：v-cloak
-+ 未解析到js时，添加此指令的元素不会显示。
-+ 若js延迟执行，会出现“先显示{{prperty}}的字面值（也就是未解析data上的数据），再显示数据对象上的数据”
+4. 指令：```v-cloak```
+   + 未解析到js时，添加此指令的元素不会显示。
+   + 若js延迟执行，会出现“先显示{{prperty}}的字面值（也就是未解析data上的数据），再显示数据对象上的数据”
 ```html
 	<style>
 		// 要写CSS的开头
@@ -86,19 +86,19 @@
 <br />
 
 ### 2. 属性
-#### 1.1 绑定属性
-#### 指令：v-bind:Attribute
-+ 简写 :Attribute
-+ 绑定属性，动态修改。
+#### 2.1 绑定属性
+**指令：```v-bind:Attribute```**
+
++ 简写 ```:Attribute```。属性不支持驼峰写法，如myAttr需转换为my-attr
++ 属性改为动态修改。
 1. 绑定href类型属性
-   + 通过字符串```:href="url"```
-   + 通过data中的属性值```:href=url```
+   + 通过data中的属性值```:href="url"```
 
 
 2. 绑定布尔类型属性
    
-+ 属性值为null、undefined、false为的属性，不会渲染到元素中。```<button disabled=isAbled>```
-  
+   + 属性值为null、undefined、false为的属性，不会渲染到元素中。```<button disabled=isAbled>```
+
 
 3. 绑定class属性
    对象写法：{k:v}的形式，k为字符串类名，v可以是data的属性值
@@ -116,7 +116,7 @@
    
    + 通过变量绑定```<div :class="[painting]">```
 + 通过字符串绑定```<div :class="[painting]">```
-   
+  
    数组写法：
    + 通过data中变量```<div :class="[painting]">```
    + 通过 字符串```<div :class="['bold']">```
@@ -145,9 +145,9 @@
         <a :href="url">百度</a>
         <hr />
         <!-- 布尔属性 -->
-        <button disabled=isAbled>按钮</button>
+        <button :disabled=isAbled>按钮</button>
         <hr />
-        <!-- 绑定class 变量写法-->
+        <!-- 绑定class 变量写法， “”中的始终当变量解析-->
         <div class="bold" :class=test>绑定class 变量写法</div>
         <div class="bold" :class="painting">绑定class 变量写法</div>
         <hr />
@@ -155,7 +155,7 @@
         <div class="bold" :class="{'painting': painting}">绑定class 对象写法</div>
         <div :class="{'painting': color, 'bold':bold}">绑定class 对象写法</div>
         <hr />
-        <!-- 绑定class 数组写法-->
+        <!-- 绑定class 数组写法 成员可能是变量，可能是字符串-->
         <div :class="[painting]">绑定class 数组写法</div>
         <div :class="['bold']">绑定class 数组写法</div>
         <hr />
@@ -184,3 +184,124 @@
 ```
 输出：
 ![5](../imgs/02-插值/6.png)
+
+
+
+#### 2.2 计算属性
+
+有时候，不能直接使用data中的数据，而是要将data中的数据进行相关处理后，再进行展示。
+
+1. 写法
+   + **计算属性写在Vue实例的computed属性中，只能用Mustache方式使用**
+   + 计算属性的形式虽然是函数，调用的时候使用使用变量名即可。
+   + 因为是属性，所以变量名尽量用名词的形式表达。
+   + 响应式，会缓存，无论使用多少次，只会执行一次。
+
+```html
+	<style>
+		.color {
+			color: aqua;
+		}
+	</style>
+</head>
+
+<body>
+	<div id="app">
+		<div class="colorName">{{fullName}}</div>
+	</div>
+	<script>
+		const app = new Vue({
+			el: '#app',
+			data: {
+				firstname: 'Lebron',
+				lastname: 'James'
+			},
+			//计算属性
+			computed: {
+				// 用名词形式标识符，因为是个属性
+				fullName() {
+					return this.firstname + '-' + this.lastname;
+				},
+				colorName() {
+					return 'color';
+				}
+			}
+		})
+	</script>
+</body>
+```
+
+输出：
+可以看到，以上代码中colorName属性并不会生效，因为只能使用{{fullName}}的方式。
+![](E:\前端\vue\01-总结\imgs\02-插值\7计算属性.png)
+<br />
+
+2. 计算属性本质
+
+   + 计算属性可设置getter和setter存取器，来控制属性的读取。
+```js
+	computed: {
+			fullName: {
+				get() {
+					return this.firstname + '-' + this.lastname;
+				},
+				set() {
+					this.firstname = "kobe";
+					this.lastname = "Byrant";
+				}
+			},	
+   }
+```
+
+   + 若省略get方法，可以简洁些
+```js
+	computed: {
+		fullName(){
+				return this.firstname + '-' + this.lastname;
+		},	
+  }
+```
+![](E:\前端\vue\01-总结\imgs\02-插值\8.png)
+<br />
+
+3. 计算属性会缓存，性能高，所以不需要使用method来处理。
+```html
+![9](E:\前端\vue\01-总结\imgs\02-插值\9.png)![9](E:\前端\vue\01-总结\imgs\02-插值\9.png)<body>
+	<div id="app">
+		<div>{{fullName}}</div>
+		<div>{{fullName}}</div>
+		<div>{{fullName}}</div>
+
+		<div>{{getFullName()}}</div>
+		<div>{{getFullName()}}</div>
+		<div>{{getFullName()}}</div>
+	</div>
+	<script>
+		const app = new Vue({
+			el: '#app',
+			data: {
+				firstname: 'Lebron',
+				lastname: 'James'
+			},
+			methods: {
+				getFullName() {
+					console.log("调用方法，每次都会执行");
+					return this.firstname + '-' + this.lastname;
+				}
+			},
+			//计算属性
+			computed: {
+				fullName() {
+					console.log("调用计算属性，会缓存");
+					return this.firstname + '-' + this.lastname;
+				}
+			}
+		})
+	</script>
+</body>
+```
+运行：
+调用方法，每次都会执行，调用计算属性，会缓存
+![](../imgs/02-插值/9.png)
+<br />
+
