--- a/docs/07组件化.md
+++ b/docs/07组件化.md
@@ -482,3 +482,83 @@ props的属性只能根据父组件的data值响应。
 <br />
 运行：
 ![](../imgs/07组件化/8.png)
+
+<br />
+
+### 七. 父子组件的访问
+1. 父组件访问子组件
+可以访问子组件的data、props、methods。可以修改data，不可修改props（只能父组件动态传入）。
+   + ```$children[index]``` ：不推荐使用，缺点：硬编码。
+   + ```$refs``` ：子组件中定义```ref="value"```属性，父组件中使用```$refs.value```指定要访问的子组件。
+例子：
+```html
+<body>
+  <div id="app">
+    <son1 :son1prop="appnum1" ref="son1"></son1>
+    <son2 :son2prop="appnum1" ref="son2"></son2>
+    <button @click="getSon1Data">访问子组件</button>
+    <button @click="getSon2Data">访问子组件</button>
+  </div>
+
+  <template id="son1">
+    <div>子组件1</div>
+  </template>
+
+  <template id="son2">
+    <div>子组件2</div>
+  </template>
+
+  <script>
+    const app = new Vue({
+      el: '#app',
+      data: {
+        appnum1: 1
+      },
+      components: {
+        son1: {
+          template: '#son1',
+          data() {
+            return {
+              message: "子组件1的data"
+            }
+          },
+          props: {
+            son1prop: Number
+          }
+        },
+        son2: {
+          template: '#son2',
+          data() {
+            return {
+              message: "子组件2data"
+            }
+          },
+          props: {
+            son2prop: Number
+          }
+        }
+      },
+      methods: {
+        getSon1Data() {
+          this.$children[0].message = 2;
+          console.log("children:父组件访问子组件1的data：" + this.$children[0].message);
+          console.log("children：父组件访问子组件1的props：" + this.$children[0].son1prop);
+        },
+        getSon2Data() {
+          this.$children[0].message = 2;
+          console.log("$refs:父组件访问子组件2的data：" + this.$refs.son2.message);
+          console.log("$refs:父组件访问子组件2的props：" + this.$refs.son2.son1prop);
+        }
+      }
+    })
+
+  </script>
+</body>
+```
+运行：
+![](../imgs/07组件化/9.png)
+
+2. 子组件访问父组件
+可以访问父组件的data、props、methods。
+   + ```$parent``` ：不推荐使用，缺点：硬编码。子组件在不同的父组件中可能访问不到对应的属性，且父组件的数据不易维护。
+
